--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,7 +56,7 @@
             <span class="white-text email">{{site.user_email}}</span>
           </div>
         </li>
-        <li><a class="waves-effect" href="{{site.baseurl}}/"><i class="material-icons">face unlock</i>Home</a></li>
+        <li><a class="waves-effect" href="{{site.baseurl}}/"><i class="material-icons">face_unlock</i>Home</a></li>
         <li><a class="waves-effect" href="{{site.baseurl}}/projects"><i class="material-icons">description</i>Projects</a></li>
         <li><a class="waves-effect" href="{{site.baseurl}}/categories"><i class="material-icons">sort</i>Categories</a></li>
         <li><a class="waves-effect" href="{{site.baseurl}}/tags"><i class="material-icons">label</i>Tags</a></li>
