updates to website include removing doge speak lorem ipsum About

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,14 +3,17 @@
     <a href="{{site.github_profile}}" target="_blank"><img class="circle hoverable z-depth-1" src="{{site.baseurl}}/assets/res/user.png"></a>
   </div>
   <div class="user-intro center-align">
-    <h4 class="hidden">I am a <span id="js-rotating">So Simple, Very Doge, Much Wow, Such Cool</span> Text Rotator</h4>
+    <h4 class="hidden">Practical, hands-on training for biologists</h4>
   </div>
   <div class="user-content">
     <p>
-      Īn delectus tǣcimates perīculā sīt, duō et ƿisl justo oporteat. Mēl te veƿiǽm ġrǣeco iuvǣrēÞ, per āt ǽdmodūm mēƿandri ǽðipiscīng. Eæ qui dicō ǣlia essēnÞ, āt ƿec fugit eraƿt æppǣreǽÞ. Cu ēæm omnes plaċerāt.
+      High throughput sequencing has brought abundant sequence data along with a wealth of new “-omics” protocols, and this explosion of data can be as bewildering as it is exciting. At the Bioinformatics Core we believe in supporting researchers and their projects from the earliest stage of planning to analysis, whether through our <a href="https://bioinformatics.ucdavis.edu/data-analysis" target="_blank" rel="noreferrer noopener">data analysis services</a> or training programs.
     </p>
     <p>
-      Lorem ipsum ðolor sit amēt, per hǣrum soleǽt convenire et. Diċo dolōrum qualisque meī ēt, ius æƿ modus facilisi dīspūtaÞioƿī. Ei puteƿÞ vērear quo, ne sit stet sǣpientēm ċoncepÞam. Sed prōbo virtute voluptariā ūt. Ullūm promptǽ ið mel, dīæm neglegenÞur per no, eī nullam possim mediōcrēm pri.
+      Our multi-day hands-on workshops give researchers the tools to plan and execute successful bioinformatics and genomics experiments. These workshops, taught by experienced Bioinformatics Core personnel, cover both the theoretical and practical aspects of a wide range of genomic experiments, including genome assembly, RNA-Seq, epigenetic experiments, single cell RNA-Seq, and more.
+    </p>
+    <p>
+      To see the dates and description of each of our current training events, visit the <a href="https://registration.genomecenter.ucdavis.edu/" target="_blank" rel="noreferrer noopener">Genome Center Event Registration</a> site. Documentation for our courses, past and present, can be found here.
     </p>
   </div>
 </div>
