--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
     </main>
-    <footer class="page-footer teal">
+    <footer class="page-footer bg-aggie-blue">
       <div class="container">
         <div class="row">
           <div class="col s12">
