--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,13 +29,14 @@
     {% endif %}
     {% endfor %}
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/syntax.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/colors.css">
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{site.baseurl}}/feed.xml">
     <link rel="sitemap" type="application/xml" title="Sitemap" href="{{site.baseurl}}/sitemap.xml">
     {% seo title=false %}
   </head>
   <body>
     <header>
-      <nav class="top-nav teal">
+      <nav class="top-nav bg-aggie-blue">
         <div class="nav-wrapper">
           <div class="container">
             <a class="page-title" href="{{site.baseurl}}/">{{site.title}}</a>
@@ -50,14 +51,19 @@
       <ul id="slide-out" class="side-nav fixed">
         <li>
           <div class="userView">
-            <div class="background"></div>
+            <div class="background bg-sunflower"></div>
             <a href="{{site.github_profile}}" target="_blank"><img class="circle z-depth-2" src="{{site.baseurl}}/assets/res/user.png"></a>
-            <span class="white-text name">{{site.user}}</span>
-            <span class="white-text email">{{site.user_email}}</span>
+
+            <div class="text-container">
+              <span class="white-text name">{{site.user}}</span>
+              <span class="white-text email">
+                <a href="mailto:{{site.user_email}}">{{site.user_email}}</a>
+              </span>
+            </div>
           </div>
         </li>
         <li><a class="waves-effect" href="{{site.baseurl}}/"><i class="material-icons">face</i>Home</a></li>
-        <li><a class="waves-effect" href="{{site.baseurl}}/projects"><i class="material-icons">description</i>Projects</a></li>
+        <li><a class="waves-effect" href="{{site.baseurl}}/projects"><i class="material-icons">description</i>Course Materials</a></li>
         <li><a class="waves-effect" href="{{site.baseurl}}/categories"><i class="material-icons">sort</i>Categories</a></li>
         <li><a class="waves-effect" href="{{site.baseurl}}/tags"><i class="material-icons">label</i>Tags</a></li>
         <li><a class="waves-effect" href="{{site.baseurl}}/feed.xml" target="_blank"><i class="material-icons">rss_feed</i>RSS</a></li>
