change to gold color

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,7 +51,7 @@
       <ul id="slide-out" class="side-nav fixed">
         <li>
           <div class="userView">
-            <div class="background bg-sunflower"></div>
+            <div class="background bg-aggie-gold"></div>
             <a href="{{site.github_profile}}" target="_blank"><img class="circle z-depth-2" src="{{site.baseurl}}/assets/res/user.png"></a>
 
             <div class="text-container">
