--- a/assets/css/colors.sass
+++ b/assets/css/colors.sass
@@ -8,6 +8,9 @@ $aggieSage: #6CCA98
 .bg-aggie-blue
   background-color: $aggieBlue !important
 
+.bg-aggie-gold:
+  background-color: $aggieGold
+  
 .bg-sunflower
   background-color: $aggieSunflower
 
