simplify site to projects page only

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,16 +39,16 @@
       <nav class="top-nav bg-aggie-blue">
         <div class="nav-wrapper">
           <div class="container">
-            <a class="page-title" href="{{site.baseurl}}/">{{site.title}}</a>
+            <a class="page-title" href="{{site.baseurl}}/">{{page.title}}</a>
           </div>
         </div>
       </nav>
-      <div class="container">
+      <!-- <div class="container">
         <a href="#" data-activates="slide-out" class="button-collapse top-nav full hide-on-large-only">
           <i class="material-icons">menu</i>
         </a>
-      </div>
-      <ul id="slide-out" class="side-nav fixed">
+      </div> -->
+      <!-- <ul id="slide-out" class="side-nav fixed">
         <li>
           <div class="userView">
             <div class="background bg-aggie-gold"></div>
@@ -62,7 +62,7 @@
             </div>
           </div>
         </li>
-        <li><a class="waves-effect" href="{{site.baseurl}}/"><i class="material-icons">face</i>Home</a></li>
+        <li><a class="waves-effect" href="{{site.baseurl}}/"><i class="material-icons">description</i>Course Materials</a></li>
         <li><a class="waves-effect" href="{{site.baseurl}}/projects"><i class="material-icons">description</i>Course Materials</a></li>
         <li><a class="waves-effect" href="{{site.baseurl}}/categories"><i class="material-icons">sort</i>Categories</a></li>
         <li><a class="waves-effect" href="{{site.baseurl}}/tags"><i class="material-icons">label</i>Tags</a></li>
@@ -70,6 +70,6 @@
         <li><div class="divider"></div></li>
         <li><a class="waves-effect" href="{{site.baseurl}}/about"><i class="material-icons">person</i>About</a></li>
         <li><a class="waves-effect" href="{{site.baseurl}}/contact"><i class="material-icons">email</i>Contact</a></li>
-      </ul>
+      </ul> -->
     </header>
     <main>
