--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,9 +2,9 @@
 layout: default
 css: ["page.css"]
 ---
-<div id="page-info">
+<!-- <div id="page-info">
   <h3>{{page.title}}</h3>
-</div>
+</div> -->
 <div class="row">
   {{ content }}
 </div>
