--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,3 +1,7 @@
+<div class="col s12">
+  <p>To learn more about the UC Davis Bioinformatics data analysis services and training program, visit <a href="https://bioinformatics.ucdavis.edu/" target="_blank" rel="noreferrer noopener">our website</a>. Dates and prices for our current workshops can be found on the <a href="https://registration.genomecenter.ucdavis.edu/" target="_blank" rel="noreferrer noopener">Genome Center Event Registration</a> site.</p>
+</div>
+
 {% assign sorted_repos = site.github.public_repositories | sort: 'created_at') | reverse %}
 <div class="col s12 switch">
   <label>
@@ -11,7 +15,11 @@
   <div class="card hoverable">
     <div class="card-image waves-effect waves-block waves-light geopattern activator" data-pattern-id="{{repo.name}}">
       <i class="material-icons waves-effect waves-block waves-light">more_vert</i>
-      <a class="card-title center-align valign-wrapper" href="{{repo.html_url}}" target="_blank">
+      {% assign repo_href = repo.html_url %}
+      {% if repo.has_pages %}
+      {% assign repo_href = {repo_href | regex_replace: 'github.com/ucdavis-bioinformatics-training', 'ucdavis-bioinformatics-training.github.io'} %}
+      {% endif %}
+      <a class="card-title center-align valign-wrapper" href="{{repo_href}}" target="_blank">
         {{repo.name}}
       </a>
     </div>
