--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -21,7 +21,7 @@ main
 header,
 main,
 footer
-  padding-left: 300px
+  // padding-left: 300px
 
 .container
   width: 90%
@@ -111,7 +111,7 @@ main
   header,
   main,
   footer
-    padding-left: 300px
+    // padding-left: 300px
 
   nav
     .nav-wrapper
